--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <button class="btn btn-default">检验是否为子集</button>
+      <button class="btn btn-default" onclick="ziji()">检验是否为子集</button>
     </div>
   </div>
 </form>
