--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
 <title>JavaScript 集合 Demo</title>
 <script src="main.js"></script>
 <script>
-  function ziji {
+  function ziji() {
     var a = document.getElementById("a").value;
     var xa = a.split(",");
-    var b = document.getElementById("a").value;
+    var b = document.getElementById("b").value;
     var xb = b.split(",");
   document.getElementById("p1").innerHTML=issubset(xa, xb);
+  }
+  function zhenziji() {
+    var a = document.getElementById("a").value;
+    var xa = a.split(",");
+    var b = document.getElementById("b").value;
+    var xb = b.split(",");
+  document.getElementById("p1").innerHTML=isprosubset(xa, xb);
+  }
+  function chaoji() {
+    var a = document.getElementById("a").value;
+    var xa = a.split(",");
+    var b = document.getElementById("b").value;
+    var xb = b.split(",");
+  document.getElementById("p1").innerHTML=issuperset(xa, xb);
   }
   </script>
 </head>
@@ -31,6 +45,8 @@
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <button class="btn btn-default" onclick="ziji()">检验是否为子集</button>
+      <button class="btn btn-default" onclick="zhenziji()">检验是否为真子集</button>
+      <button class="btn btn-default" onclick="chaoji()">检验是否为超集</button>
     </div>
   </div>
 </form>
