--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
+<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <title>JavaScript 集合 Demo</title>
 <script src="main.js"></script>
 <script>
@@ -10,21 +13,21 @@
     var xa = a.split(",");
     var b = document.getElementById("b").value;
     var xb = b.split(",");
-  document.getElementById("p1").innerHTML=issubset(xa, xb);
+  document.getElementById("xp").innerHTML = issubset(xa, xb);
   }
   function zhenziji() {
     var a = document.getElementById("a").value;
     var xa = a.split(",");
     var b = document.getElementById("b").value;
     var xb = b.split(",");
-  document.getElementById("p1").innerHTML=isprosubset(xa, xb);
+  document.getElementById("xp").innerHTML = isprosubset(xa, xb);
   }
   function chaoji() {
     var a = document.getElementById("a").value;
     var xa = a.split(",");
     var b = document.getElementById("b").value;
     var xb = b.split(",");
-  document.getElementById("p1").innerHTML=issuperset(xa, xb);
+  document.getElementById("xp").innerHTML = issuperset(xa, xb);
   }
   </script>
 </head>
@@ -50,6 +53,6 @@
     </div>
   </div>
 </form>
-  <p id="p1">这里用来显示结果</p>
+  <p id="xp">这里用来显示结果</p>
 </body>
 </html>
