--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <title>JavaScript 集合 Demo</title>
-<script src="main.js"></script>
+</head>
+<body>
+  <script src="main.js"></script>
 <script>
   function ziji() {
     var a = document.getElementById("a").value;
@@ -58,8 +61,6 @@
   document.getElementById("xp").innerHTML = diffset(xa, xb);
   }
   </script>
-</head>
-<body>
     <form class="form-horizontal" role="form">
   <div class="form-group">
     <label for="a" class="col-sm-2 control-label">请输入A</label>
