--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
   document.getElementById("xp").innerHTML = diffset(xa, xb);
   }
   </script>
-    <form class="form-horizontal" role="form">
+    <form role="form">
   <div class="form-group">
-    <label for="a" class="col-sm-2 control-label">请输入A</label>
+    <label for="a" class="control-label">请输入A</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="a" placeholder="请输入A（不同元素用英文逗号分隔）">
     </div>
   </div>
   <div class="form-group">
-    <label for="b" class="col-sm-2 control-label">B</label>
+    <label for="b" class="control-label">B</label>
     <div class="col-sm-10">
       <input type="text" class="form-control" id="b" placeholder="请输入B（不同元素用英文逗号分隔）">
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
+    <div>
       <button class="btn btn-default" onmouseover="ziji()">检验是否为子集</button>
       <button class="btn btn-default" onmouseover="zhenziji()">检验是否为真子集</button>
       <button class="btn btn-default" onmouseover="chaoji()">检验是否为超集</button>
